[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Customer.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Scripts/PlayerController.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 40 )

[node name="PlayerCharacter" type="KinematicBody2D"]
position = Vector2( 400, 304 )
collision_mask = 3
script = ExtResource( 2 )
WALK_SPEED = 100.0
ROTATION_SPEED = 7.0
FRICTION = 0.01
MAX_ACCELERATION = 250
MAX_DECELERATION = 75

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Body"]
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.8, 0.8 )

[node name="ScoreTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.35
one_shot = true

[node name="LevelTimer" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Score" type="TextEdit" parent="HUD"]
margin_left = 40.0
margin_top = 24.0
margin_right = 128.0
margin_bottom = 64.0
text = "Score: xxx
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="TextEdit" parent="HUD"]
margin_left = 128.0
margin_top = 24.0
margin_right = 232.0
margin_bottom = 64.0
text = "Time Left: xxx"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
